Move Objectives under introduction

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -4,22 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>\n",
-    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
-    "</center>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Add your code below following the instructions given in the course\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Data Science Tools and Ecosystem"
    ]
   },
@@ -34,11 +18,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Objectives:**\n",
+    "- List popular languages for Data Science\n",
+    "- Identify commonly used libraries for Data Science\n",
+    "- Describe common tools for Data Science\n",
+    "- Understand basic Git and GitHub operations\n",
+    "- Create simple data visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Some of the popular languages that Data Scientists use are:\n",
     "1. R\n",
     "2. Python\n",
     "3. SQL\n",
-    "4. ..."
+    "4. Java\n",
+    "5. C++\n",
+    "6. Julia\n",
+    "7. Php\n",
+    "8. Ruby\n",
+    "9. ..."
    ]
   },
   {
@@ -48,8 +49,12 @@
     "Some of the commonly used libraries used by Data Scientists include:\n",
     "1. Numpy\n",
     "2. Pandas\n",
-    "3. ggplot\n",
-    "4. ..."
+    "3. ggplot2\n",
+    "4. Seaborn\n",
+    "5. Matplotlib\n",
+    "6. Scikit-learn\n",
+    "7. Apache Spark\n",
+    "8. ..."
    ]
   },
   {
@@ -119,18 +124,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Objectives:**\n",
-    "- List popular languages for Data Science\n",
-    "- Identify commonly used libraries for Data Science\n",
-    "- Describe common tools for Data Science\n",
-    "- Understand basic Git and GitHub operations\n",
-    "- Create simple data visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Author\n",
     "Lang Zhang"
    ]
@@ -152,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
