Update notebook after feedback

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -22,8 +22,7 @@
     "- List popular languages for Data Science\n",
     "- Identify commonly used libraries for Data Science\n",
     "- Describe common tools for Data Science\n",
-    "- Understand basic Git and GitHub operations\n",
-    "- Create simple data visualizations"
+    "- Display examples of evalating arithmetic"
    ]
   },
   {
